# Ccourse

./: CMakeLists.txt  main.cpp
configs/: README.txt  settings.txt  test.txt
headers/: Algorithm.h  AllVariants.h  Chebyshev.h  Common.h  Eucledian.h  Manhattan.h  Metric.h  NeareastPoint.h  Point.h  RandomWay.h  Solver.h
src/: Algorithm.cpp  AllVariants.cpp  Chebyshev.cpp  Common.cpp  Eucledian.cpp  Manhattan.cpp  Metric.cpp  NeareastPoint.cpp  Point.cpp  RandomWay.cpp  Solver.cpp
