cmake_minimum_required(VERSION 3.12)
project(Hw10)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall")
include_directories(headers)
include_directories(src)
file(GLOB_RECURSE HEADERS RELATIVE ${CMAKE_SOURCE_DIR} "headers/*.h")
file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.cpp")

add_executable(Hw10 main.cpp ${HEADERS} ${SOURCES})